// Vitest Snapshot v1

exports[`withPrometheus should works well > stat 1`] = `
{
  "errorsCounter": 0,
  "hitCounter": 10,
  "hitNotFoundCacheCounter": 10,
  "requestsCounter": 11,
}
`;

exports[`withPrometheus should works well > stat 2 1`] = `
{
  "errorsCounter": 0,
  "hitCounter": 20,
  "hitNotFoundCacheCounter": 10,
  "requestsCounter": 22,
}
`;

exports[`withPrometheus should works well 1`] = `
"# HELP node_cache_requests_total Total number of requests to the cache.
# TYPE node_cache_requests_total counter
node_cache_requests_total{name=\\"my-cache1\\"} 11

# HELP node_cache_hits_total Total number of requests to the cache that were a hit.
# TYPE node_cache_hits_total counter
node_cache_hits_total{name=\\"my-cache1\\"} 10

# HELP node_cache_errors_total Total number of errors to the cache.
# TYPE node_cache_errors_total counter

# HELP node_cache_hit_not_found_cache_total Total number of requests to the cache that hit a not found cache.
# TYPE node_cache_hit_not_found_cache_total counter
node_cache_hit_not_found_cache_total{name=\\"my-cache1\\"} 10
"
`;

exports[`withPrometheus should works well 2`] = `
"# HELP node_cache_requests_total Total number of requests to the cache.
# TYPE node_cache_requests_total counter
node_cache_requests_total{name=\\"my-cache1\\"} 22

# HELP node_cache_hits_total Total number of requests to the cache that were a hit.
# TYPE node_cache_hits_total counter
node_cache_hits_total{name=\\"my-cache1\\"} 20

# HELP node_cache_errors_total Total number of errors to the cache.
# TYPE node_cache_errors_total counter

# HELP node_cache_hit_not_found_cache_total Total number of requests to the cache that hit a not found cache.
# TYPE node_cache_hit_not_found_cache_total counter
node_cache_hit_not_found_cache_total{name=\\"my-cache1\\"} 10
"
`;

exports[`withPrometheus should works well: stat 1`] = `
Object {
  "errorsCounter": 0,
  "hitCounter": 10,
  "hitNotFoundCacheCounter": 10,
  "requestsCounter": 11,
}
`;

exports[`withPrometheus should works well: stat 2 1`] = `
Object {
  "errorsCounter": 0,
  "hitCounter": 20,
  "hitNotFoundCacheCounter": 10,
  "requestsCounter": 22,
}
`;
